feat: Refactor with newdb structures
