# pkg/models/origin.go
@@ -1,7 +1,0 @@
-package models
-
-type Origin struct {
-	Id   int64  `json:"Id"`
-	Name string `json:"Name"`
-	Slug string `json:"Slug"`
-}
